microservices/movies/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: movies
  ports:
  - port: 8080
    targetPort: 8080
